web: fix text colour on initial load when not in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -97,6 +97,9 @@ html > form > input {
 body {
     background-color: var(--ak-dark-background) !important;
 }
+.ak-initial-load h1 {
+    color: var(--ak-dark-foreground);
+}
 
 @media (prefers-color-scheme: dark) {
     :root {
